--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -423,7 +423,9 @@
 - date: 2023-11-21
   week: 14
   title: out-of-order 1
-  slides_see: 2023-11-16
+  slides: yes
+  slides_prelim: yes
+  slides_extra: yes
   reading: "[processors](readings/procesors.html) §2-3"
   description: |
     *  briefly, branch prediction ideas (start)
