link up text file

--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -478,6 +478,8 @@
 - date: 2023-12-05
   week: 16
   title: Exam Review
+  description: |
+    [text file from lecture](recordings/20231205-notes.txt)
 
 - date: 2023-12-14
   week: 17
