--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -485,4 +485,4 @@
   week: 17
   title: Final Exam
   description: |
-    Scheduled time: 9am-12pm Thursday 14 December
+    Scheduled time: 9am-12pm Thursday 14 December in McLeod auditorium
