mark out of town day

--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -267,6 +267,8 @@
   slides_see: 2024-03-19
   slides_see2: 2024-03-14
   description: |
+    (Reiss out of town)
+
     *  deadlock
        *  definition
        *  preventing/avoiding
