--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -23,7 +23,7 @@
 - date: 2024-01-24
   week: 2
   no_class: true
-  description: (no lab)
+  description: tentatively no lab
 
 - date: 2024-01-25
   week: 2
