--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -1,3 +1,8 @@
+- date: 2024-01-17
+  week: 2
+  no_class: true
+  description: (no lab)
+
 - date: 2024-01-18
   week: 1
   title: introduction / building (pt 1)
