--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -27,8 +27,8 @@
  
 - date: 2024-01-24
   week: 2
-  no_class: true
-  description: tentatively no lab
+  x_no_class: true
+  x_description: tentatively no lab
 
 - date: 2024-01-25
   week: 2
