--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -5,7 +5,7 @@
 
 - date: 2024-01-18
   week: 1
-  title: introduction / building (pt 1)
+  title: introduction / building intro
   slides: yes
   reading: "[overview](readings/intro.html), (partially) [compilation](readings/compilation.html)"
   description: |
@@ -17,9 +17,8 @@
 
 - date: 2024-01-23
   week: 2
-  title: building (pt 2)
+  title: building
   slides: yes
-  slides_prelim: yes
   reading: "[compilation](readings/compilation.html), [makefiles](readings/make.html)"
   description: |
     *  .o, .a, .so files
