--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -47,7 +47,7 @@
 - date: 2024-01-30
   week: 3
   title: privilege / exceptions
-  reading: "[kernel](readings/kernel.html) §1-2.2, 3 / [thread](readings/thread.html) §1-2"
+  reading: "[kernel](readings/kernel.html) §1-2.2, 3 "
   slides: yes
   slides_prelim: yes
   sldies_extra: yes
@@ -65,7 +65,7 @@
 - date: 2024-02-01
   week: 3
   title: exceptions / signals 1
-  reading: "[kernel](readings/kernel.html) §3, 2.3.1"
+  reading: "[thread](readings/thread.html) §1-2 / [kernel](readings/kernel.html) §2-2.2, 3, 2.3.1"
   slides: yes
   slides_extra: yes
   description: |
