--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -64,10 +64,9 @@
 
 - date: 2024-02-01
   week: 3
-  title: exceptions / signals 1
+  title: exceptions 
   reading: "[thread](readings/thread.html) §1-2 / [kernel](readings/kernel.html) §2-2.2, 3, 2.3.1"
   slides: yes
-  slides_extra: yes
   description: |
     *  exceptions
        *  other events triggering
@@ -79,7 +78,7 @@
 
 - date: 2024-02-06
   week: 4
-  title: signals 2
+  title: signals 1
   reading: "[kernel](readings/kernel.html) §2.3.1"
   slides_prelim: yes
   slides: yes
