VM-explore still tentative

--- a/_data/assignments.yml
+++ b/_data/assignments.yml
@@ -66,6 +66,7 @@
 - name: virtual memory exploration
   page: labhw/vm-explore.html
   short_name: vmexplore
+  tentative: true
   lab: true
   submit_file: "lab.c"
   open: 2024-02-18
