--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -152,11 +152,13 @@
 
 - date: 2024-02-22
   week: 6
-  title: virtual memory 2
+  title: virtual memory 3
   reading: "[VM](readings/vm.html) §2.1, 3.2"
-  slides_see: 2024-02-20
+  slides: yes
+  slides_prelim: yes
   description: |
     *  page tables (finish)
+       *  pagetable assignment
        *  as a tree
        *  multi-level lookup example
 
